<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">System Strength</string>
    <string name="voltar">Voltar</string>
    <string name="icomore">+</string>
    <string name="home">Home</string>
    <string name="agenda">Agenda</string>
    <string name="servicos">Serviços</string>
    <string name="clientes">Clientes</string>
    <string name="descnamesystem">System Strength</string>
    <string name="login">Login</string>
    <string name="cpf">Cpf</string>
    <string name="senha">Senha</string>
    <string name="logaragora">LOGAR AGORA</string>
    <string name="criarconta">Criar Conta</string>
    <string name="esqueciasenha">Esqueci a Senha</string>
    <string name="hinteditcpf"> Insira seu cpf</string>
    <string name="hintusuario">Insira aqui seu nome de usuario</string>
    <string name="hintsenha">Insira aqui sua senha</string>
    <string name="ola">Olá,</string>
    <string name="criesuaconta">Crie sua conta para entrar</string>
    <string name="hinteditnomefunc"> Insira seu nome</string>
    <string name="hinteditemail"> Insira seu email</string>
    <string name="hinteditsenha"> Insira uma senha</string>
    <string name="hinteditend"> Insira seu endereço</string>
    <string name="hintedittell"> Insira seu celular</string>
    <string name="hinteditcargo"> Insira seu cargo</string>
    <string name="nomefunccadastro">Nome*</string>
    <string name="cpfcadastro">CPF*</string>
    <string name="email">Email*</string>
    <string name="cargocadastro">Cargo*</string>
    <string name="tellcadastro">Celular (Opcional)</string>
    <string name="enderecocadastro">Endereço (Opcional)</string>
    <string name="senhacadas">Senha*</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="avisonomefunc">*Necessário ao menos 8 caracteres</string>
    <string name="avisosenha">*Necessário ao menos 8 caracteres</string>
    <string name="avisocpf">*Necessário 11 caracteres</string>
    <string name="naosepreoocupe">Não se preocupe podemos alterar ela para você</string>
    <string name="eita">Eitaa..</string>
    <string name="eserio">É serio que você esquecou sua senha?</string>
    <string name="avisoprotocolo">De acordo com o protocolo de segurança, sua senha apenas podera ser alterada por um gerente da System Strength</string>
    <string name="entraremcontato">Solicite a troca de senha com seu gerente</string>
    <string name="contato">Contato</string>
    <string name="ops">Opss.. :(</string>
    <string name="naofoipossivelfazerseucadastro">Não foi possivel realizar o seu cadastro</string>
    <string name="naofoipossivelconectaraobanco">Não foi possivel estabelecer conexão ao banco de dados de nossa empresa, e consequentimente não a possibilidade de geral sua nova conta</string>
    <string name="contatenossaequipe">Contate nossa equipe para mais informações</string>
    <string name="java">JAVA</string>
    <string name="csharp">C#</string>
    <string name="js">JAVASCRIPT</string>
    <string name="html">HTML</string>
    <string name="css">CSS</string>
    <string name="seunome">Seu Nome</string>
    <string name="bemvindo">Bem Vindo de volta :)</string>
    <string name="tituloagenda">Agenda</string>
    <string name="tituloclientes">Clientes</string>
    <string name="saoagora">Agora são: </string>
    <string name="horaatual">Hora atual</string>
    <string name="cargoatual">Você é: </string>
    <string name="mais">+</string>
    <string name="cargo">Cargooo</string>
    <string name="proximareuniao">Proxima reúnião: </string>
    <string name="aquiestaaproximareuniao">Proxima reu as..</string>
    <string name="vcpossui">Você possui: </string>
    <string name="naohacompromissos">Não há compromissos\n cadastrados</string>
    <string name="logout">Log Out</string>
    <string name="maisinfo"><u>Mais Informações</u></string>
    <string name="contatocomo" tools:ignore="TypographyEllipsis">• Telefone\n• Email\n• Endereço\n• Etc...</string>
    <string name="funccapacitado">Funcionários Capacitados</string>
    <string name="license"><u>Info</u></string>
    <string name="danilo">Danilo Oliveira</string>
    <string name="kaua">Kauã Vitório</string>
    <string name="matheus">Matheus Souza</string>
    <string name="pedro">Pedro Morato</string>
    <string name="cargodanilo">Front-end Developer</string>
    <string name="cargokaua">Mobile Developer</string>
    <string name="cargomatheus">Back-end Developer</string>
    <string name="cargppedro">Infrastructure Analyst</string>
    <string name="sobredanilo">Olá! Me chamo Danilo Oliveira, tenho 17 anos e moro na capital de São Paulo. Estou cursando Desenvolvimento de Sistemas há 9 meses na escola Etec Prof. Basilides de Godoy, focando na área de front-end.</string>
    <string name="sobrekaua">Olá! Me chamo Kauã Vitório, tenho 16 anos, moro atualmente em São Paulo Capital, curso técnico em Desenvolvimento de sistemas na ETEC. Atuo na área de Back-end de nossa empresa, a  System Strength.</string>
    <string name="sobrematheus">Olá! Sou o Matheus Souza, tenho 17 anos, faço técnico em Desenvolvimento de sistemas na ETEC. Atuo na área de front-end e Back-end da nossa empresa, a  System Strength.</string>
    <string name="sobrepedro">Olá meu nome é Pedro Henrique Morato Mesquita Ferreira, tenho 17 anos, moro em Santana de Parnaíba, curso Desenvolvimento de Sistemas na ETEC Professor Basilides de Godoy.</string>
    <string name="nomefuncperfil">Nome do Usuário</string>
    <string name="cpfperfil">cpf:</string>
    <string name="adressperfil">Address do func aqui</string>
    <string name="phoneperfil">Phone do func aqui</string>
    <string name="emailperfil">Email do func aqui</string>
    <string name="cargoperfil">Cargo do func aqui</string>
    <string name="proximareuperfil">Proxima reunião aqui</string>
    <string name="perfilcpfbase" tools:ignore="TypographyDashes">000.000.000-00</string>
    <string name="editarperfil">Editar Perfil</string>
    <string name="hintsenhaedit">Senha do usuario aqui</string>
    <string name="adm">Gerenciar Usuarios</string>
    <string name="nome">nome</string>
    <string name="emailedit">email</string>
    <string name="cargoedit">cargo</string>
    <string name="hintproximareuniao">Quando será a proxima reunião?</string>
    <string name="proximareuniaoedit">proxima reunião (HR:MN dd/mm/aa)</string>
    <string name="salvar">Salvar</string>
    <string name="voltaraocracha">Voltar ao Crachá</string>
    <string name="gerenciamentodeusu">Gerenciamento de Usuario</string>
    <string name="hintgerenciarbuscarcpf">INSIRA O CPF DO USUARIO</string>
    <string name="voceestalogadocom">Você está logado com:</string>
    <string name="aguardandocpf" tools:ignore="TypographyEllipsis">Aguardando CPF...</string>
    <string name="hinteditcargogerenciar"> Insira o cargo do usuário</string>
    <string name="hintedittellgerenciar"> Insira o celular do usuário</string>
    <string name="hinteditendgerenciar"> Insira o endereço do usuário</string>
    <string name="hinteditnomefuncgerenciar"> Insira o nome do usuário</string>
    <string name="hinteditemailgerenciar"> Insira o email do usuário</string>
    <string name="hinteditcpfgerenciar"> Insira o cpf do usuário</string>
    <string name="listadeusuarios"><u>Lista de Usuários</u></string>
    <string name="cadastrarnovocliente"><u>Cadastrar novo Cliente</u></string>
    <string name="nomedocliente">Insira o nome do cliente</string>
    <string name="endereccliente">Endereço</string>
    <string name="enderecodocliente">Insira o endereço do cliente</string>
    <string name="phonecliente">Telefone</string>
    <string name="phonedocliente">Insira o telefone do cliente</string>
    <string name="cnpjcliente">CNPJ</string>
    <string name="cnpjedocliente">Insira o CNPJ do cliente</string>
    <string name="emailcliente">EMAIL</string>
    <string name="emaildocliente">Insira o email do cliente</string>
    <string name="editarcliente"><u>Editar Cliente</u></string>
    <string name="naoaclientecadastrado">Não há nenhum cliente cadastrado</string>
    <string name="naoaagendacadastrado">Não há nenhum compromisso agendado</string>
    <string name="novoagendamento"><u>Novo Agendamento</u></string>
    <string name="escolhercliente">Selecionar Cliente</string>
    <string name="titulonovoagendamento">Novo Agendamento</string>
    <string name="selecioneocliente">Selecione o cliente</string>
    <string name="clientedoisponto">Cliente: </string>
    <string name="cnpjdoisponto">CNPJ: </string>
    <string name="dataagenda">DATA: </string>
    <string name="hintdataagenda">Insira a data (00/00/0000)</string>
    <string name="horaagenda">HORA: </string>
    <string name="hinthoraagenda">Insira a hora (00:00)</string>
    <string name="localagenda">LOCAL: </string>
    <string name="hintlocalagenda">Insira o local</string>
    <string name="descagenda">Descrição:</string>
    <string name="hintdescagenda">Insira a descrição do agendamento</string>
    <string name="selecionaroutrocliente"><u>Selecionar outro Cliente</u></string>
    <string name="detalhes">Detalhes</string>
    <string name="btnenderecodocliente"><u><i>Endereço do cliente</i></u></string>
    <string name="nossosespecialistas">Nossos especialistas</string>
    <string name="txtfuncsystem">Aqui você pode ver nossos funcionarios e seus respectivos cargos</string>
    <string name="frontend">Front-End</string>
    <string name="backend">Back-End</string>
    <string name="analise">Análise</string>
    <string name="infra">Infraestrutura</string>
    <string name="txtbackend">O que é back-end?\nEssa forma de desenvolvimento se relaciona com o que está por trás das aplicações desenvolvidas na programação. Ou seja, tudo que dá estrutura e apoio às ações do usuário da máquina é chamado de back-end.\nQuando acessamos um site, por exemplo, por trás de toda sua apresentação amigável esteticamente, há uma comunicação das informações trocadas entre banco de dados e navegador. Portanto, por trás da interface gráfica do realizador, o back-end está sempre agindo.\nDiferenças entre back-end e front-end\nEnquanto os desenvolvimentos de front-end estão relacionados à área visual de aplicações, como design, forma da disposição de seções de texto e imagens, apresentação, linguagens HTML, CSS, cores e outros pontos; o desenvolvimento de back-end é tudo aquilo que possibilita o funcionamento.\nSendo assim, front-end e back-end estão bastante ligados, porém o segundo é voltado aos bancos de dados e servidores; responsável por atualizações, mudanças, segurança, gerenciamento de conteúdo, estrutura, etc. Se tomarmos o exemplo das redes sociais, seu funcionamento só é possível com um banco de dados que contenha informações como nome, data de nascimento, foto de perfil, e por aí vai.</string>
    <string name="txtfrontend">O que é Front End?\nPodemos classificar como a parte visual de um site, aquilo que conseguimos interagir\nQuem trabalha com Front End é responsável por desenvolver por meio de código uma interface gráfica, normalmente com as tecnologias base da Web (HTML, CSS e JavaScript).\nAlgumas pessoas podem confundir um pouco esse trabalho com o que um designer faz (no passado existia uma entidade chamda Webmaster que fazia tudo isso e mais um pouco), mas a diferença aqui é que o designer vai utilizar alguma ferramenta visual para desenhar a interface, do Photoshop ao Sketch, e quem faz front-end estará mais próxima do código em si, que irá rodar em um navegador Web como Chrome, Firefox ou Safari.</string>
</resources>